# trackrs

./: .editorconfig  .gitignore  .releaserc  2025-03-02  2025-03-02.json  2025-03-04.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go  makefile  package.json  sailr.json  trackrs.conf
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml  main-check.yml  prepare-release.yml  rust.yml
cli/: break.go  config.go  end.go  root.go  start.go  status.go
cmd/: break.go  config.go  end.go  root.go  start.go  status.go
common/: common.go  logger.go
eng/: build-release.sh
model/: entries.go  entry.go
model/action/: action.go  action_test.go
pers/: pers.go  pers_json.go
rust/: 20240612.json
rust/.devcontainer/: devcontainer.json
rust/eng/: set-version.sh
rust/src/: entry.rs  errors.rs
rust/tests/: cli.rs
src/: cli.rs  cli_o.rs  entries.rs  entry.rs  entry_builder.rs  entry_o.rs  errors.rs  lib.rs  model.rs  settings.rs  status_daily.rs  status_time.rs  status_weekly.rs  takeover.rs  test.rs  test_helper.rs  test_utils.rs  time_data.rs  time_data_old.rs  time_data_weekly.rs  tracker.rs
src/archive/: settings.rs  status_weekly.rs  time_data.rs
src/cli/: cli.rs  commands.rs  mod.rs
src/config/: break_limit.rs  break_threshold.rs  break_threshold_ext.rs  breal_limit_ext.rs  builder.rs  configuration.rs  errors.rs  file.rs  json_provider.rs  mod.rs  provider.rs  work_per_day.rs  worktime_day.rs
src/deprecated/: entry.rs  mod.rs
src/dto/: item.rs  item_collection.rs  item_metadata.rs  mod.rs  tracker_data.rs
src/entry/: entry_model.rs  mod.rs  status.rs
src/models/: action.rs  daily.rs  duration.rs  entries.rs  entry.rs  entry_v1.rs  errors.rs  mod.rs  timesheet.rs  upgrade.rs  upgrade_error.rs
src/output/: daily.rs  errors.rs  mod.rs  output.rs
src/providers/: errors.rs  json_provider.rs  mod.rs  provider.rs
src/settings/: break_limit.rs  mod.rs  setting.rs  work_per_day_in_minutes.rs
src/status/: daily.rs  duration_ext.rs  errors.rs  mod.rs  output.rs
src/storage/: errors.rs  file_storage.rs  folder.rs  json_provider.rs  mod.rs  provider.rs  storage.rs  (+1 more)
storage/: json_provider.go  json_provider_errors.go  json_provider_test.go  provider.go  storage_factory.go
tests/: cli.rs  common.rs  settings.rs  status_daily.rs  time_data.rs
timesheet/: action.go  entries.go  entry.go  timesheet.go  timesheet_errors.go  timesheet_test.go
(+21 files in other folders)
