[package]
name = "trackrs"
description = "Time Tracker CLI"
version = "0.1.0"
edition = "2021"

[lib]
name = "trackrs"

[[bin]]
name = "trackrs"
path = "src/bin/cli_executable.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features = ["serde", "clock"] }
thiserror = "^1.0"
log = "^0.4"
env_logger = "^0.10"
clap = { version = "^3.2", features = ["derive"] }
clap-verbosity-flag = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
config = "^0.13"
dirs = "^4.0"
indoc = "^1.0"
colored = "^2.0"
open = "^3.0"
prettytable-rs = "^0.10"

[dev-dependencies]
tempfile = "^3.3"
serial_test = "0.9.0"
test-context = "^0.1"
