[package]
name = "trackrs"
description = "Time Tracker CLI"
version = "0.1.0"
edition = "2021"

[lib]
name = "trackrs"

[[bin]]
name = "trackrs"
path = "src/bin/cli_executable.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", features = ["serde", "clock"] }
thiserror = "^2.0"
log = "^0.4"
env_logger = "^0.11"
clap = { version = "^4.5", features = ["derive"] }
clap-verbosity-flag = "^3.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
config = "^0.15"
dirs = "^6.0"
indoc = "^2.0"
colored = "^3.0"
open = "^5.3"
prettytable-rs = "^0.10"

[dev-dependencies]
tempfile = "^3.18"
serial_test = "^3.2"
test-context = "^0.4"
